Correct low contrast on buttons

--- a/css/main.css
+++ b/css/main.css
@@ -163,14 +163,14 @@ nav ul li a:hover {
   text-decoration: none;
   text-transform: uppercase;
   color: #fff1c9;
-  background-color: #ffaeb0;
+  background-color: #a6114a;
   padding: 5px 15px;
   border-radius: 5px;
   box-shadow: 2px 2px rgba(0, 0, 0, .1);
 }
 
 .button:hover, .button-1:hover {
-  color: #ffaeb0;
+  color: #a6114a;
   background-color: #fff1c9;
 }
 
